Заменил #rgba в svg на #rgb и fill-opacity для совместимости с IE

--- a/source/index.html
+++ b/source/index.html
@@ -164,7 +164,7 @@
               viewBox max values are bR * 2 = 33.42253804929802
              -->
             <svg width="60px" height="60px" viewBox="0 0 33.42253804929802 33.42253804929802" class="level__chart">
-              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#00000088"></circle>
+              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#000000" fill-opacity="0.6"></circle>
               <circle class="level__segment" cx="50%" cy="50%" r="15.915494309189533" fill="transparent"
                 stroke="#ff8d30" stroke-width="1.5915494309189533" stroke-dasharray="99 1" stroke-dashoffset="25">
               </circle>
@@ -205,7 +205,7 @@
           <div class="companion__level-wrap level">
             <span class="level__value">80</span>
             <svg width="60px" height="60px" viewBox="0 0 33.42253804929802 33.42253804929802" class="level__chart">
-              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#00000088"></circle>
+              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#000000" fill-opacity="0.6"></circle>
               <circle class="level__segment" cx="50%" cy="50%" r="15.915494309189533" fill="transparent"
                 stroke="#ff8d30" stroke-width="1.5915494309189533" stroke-dasharray="80 20" stroke-dashoffset="25">
               </circle>
