Добавил упоминание Лии Веру, как автора техники

--- a/source/index.html
+++ b/source/index.html
@@ -157,6 +157,9 @@
           <div class="companion__level-wrap level">
             <span class="level__value">99</span>
             <!--
+
+              here is the adopted technic which I believe was originally presented by Lea Verou in "Designing A Flexible, Maintainable CSS Pie Chart With SVG" (smashingmagazine.com/2015/07/designing-simple-pie-charts-with-css)
+
               level__segment radius is sR = 15.915494309189533  (100 / Math.PI / 2)
               we desire circle R = 30 and stroke = 3, so
               level__segment stroke sS = 15.915494309189533 * 3 / 30 = 1.5915494309189533
