Заменил вьюбокс в SVG на атрибут transform, чтобы иметь полную кастомизацию из CSS

--- a/source/index.html
+++ b/source/index.html
@@ -164,12 +164,13 @@
               we desire circle R = 30 and stroke = 3, so
               level__segment stroke sS = 15.915494309189533 * 3 / 30 = 1.5915494309189533
               level__backdrop radius is bR = sR + sS/2 = 16.71126902464901
-              viewBox max values are bR * 2 = 33.42253804929802
+              scale factor is R / bR
              -->
-            <svg width="60px" height="60px" viewBox="0 0 33.42253804929802 33.42253804929802" class="level__chart">
-              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#000000" fill-opacity="0.6"></circle>
+            <svg width="60px" height="60px" class="level__chart">
+              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#000000" fill-opacity="0.6" transform="scale(1.7951958020513106)" transform-origin="center">
+              </circle>
               <circle class="level__segment" cx="50%" cy="50%" r="15.915494309189533" fill="transparent"
-                stroke="#ff8d30" stroke-width="1.5915494309189533" stroke-dasharray="99 1" stroke-dashoffset="25">
+                stroke="#ff8d30" stroke-width="1.5915494309189533" stroke-dasharray="99 1" stroke-dashoffset="25" transform="scale(1.7951958020513106)" transform-origin="center">
               </circle>
             </svg>
           </div>
@@ -207,10 +208,11 @@
         <li class="companions-list__item companion">
           <div class="companion__level-wrap level">
             <span class="level__value">80</span>
-            <svg width="60px" height="60px" viewBox="0 0 33.42253804929802 33.42253804929802" class="level__chart">
-              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#000000" fill-opacity="0.6"></circle>
+            <svg width="60px" height="60px" class="level__chart">
+              <circle class="level__backdrop" cx="50%" cy="50%" r="16.71126902464901" fill="#000000" fill-opacity="0.6" transform="scale(1.7951958020513106)" transform-origin="center">
+              </circle>
               <circle class="level__segment" cx="50%" cy="50%" r="15.915494309189533" fill="transparent"
-                stroke="#ff8d30" stroke-width="1.5915494309189533" stroke-dasharray="80 20" stroke-dashoffset="25">
+                stroke="#ff8d30" stroke-width="1.5915494309189533" stroke-dasharray="80 20" stroke-dashoffset="25" transform="scale(1.7951958020513106)" transform-origin="center">
               </circle>
             </svg>
           </div>
