Перенёс заголовок главной страницы в хидер для единообразия с другими страницами

--- a/source/index.html
+++ b/source/index.html
@@ -58,12 +58,10 @@
         </ul>
       </div>
     </nav>
+    <h1 class="page-header__heading visually-hidden">Сайт поиска попутчиков «Погнали»</h1>
   </header>
 
   <main class="page-main">
-
-    <h1 class="visually-hidden">Сайт поиска попутчиков «Погнали»</h1>
-
     <section class="first-screen">
       <b class="first-screen__slogan">В путешествие с крутыми попутчиками!</b>
       <ul class="first-screen__reach-n-user-list reach-n-user-list">
