Переделка элементов в модификаторы

--- a/source/blocks/page-header/page-header.html
+++ b/source/blocks/page-header/page-header.html
@@ -33,26 +33,28 @@
         </ul>
         <ul class="main-nav__list reach-list">
           <li class="reach-list__item">
-            <a class="reach-list__phone" href="tel:+78005558628">8 800 555-86-28</a>
+            <a class="reach-list__link reach-list--phone reach-list--inverse" href="tel:+78005558628">8 800
+              555-86-28</a>
           </li>
           <li class="reach-list__item">
-            <a class="reach-list__email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <a class="reach-list__link reach-list--email reach-list--inverse"
+              href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
         </ul>
         <ul class="main-nav__social-list social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--facebook" href="https://www.facebook.com/htmlacademy"><span
-                class="visually-hidden">Мы в
+            <a class="social-list__link social-list__link--facebook social-list__link--alternate"
+              href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в
                 Фейсбуке</span></a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy"><span
-                class="visually-hidden">Мы во
+            <a class="social-list__link social-list__link--vkontakte social-list__link--alternate"
+              href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во
                 Вконтакте</span></a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--instagram" href="https://www.instagram.com/htmlacademy"><span
-                class="visually-hidden">Мы в
+            <a class="social-list__link social-list__link--instagram social-list__link--alternate"
+              href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в
                 Инстаграме</span></a>
           </li>
         </ul>
