--- a/source/index.html
+++ b/source/index.html
@@ -14,13 +14,14 @@
       <b class="first-screen__slogan">В путешествие с крутыми попутчиками!</b>
       <ul class="first-screen__reach-n-user-list reach-n-user-list">
         <li class="reach-n-user-list__item">
-          <a class="reach-n-user-list__phone" href="tel:+78005558628">8 800 555-86-28</a>
+          <a class="reach-n-user-list__link reach-n-user-list__link--phone" href="tel:+78005558628">8 800 555-86-28</a>
         </li>
         <li class="reach-n-user-list__item">
-          <a class="reach-n-user-list__email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          <a class="reach-n-user-list__link reach-n-user-list__link--email"
+            href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </li>
         <li class="reach-n-user-list__item">
-          <a class="reach-n-user-list__auth" href="login.html">Авторизация</a>
+          <a class="reach-n-user-list__link reach-n-user-list__link--auth" href="login.html">Авторизация</a>
         </li>
       </ul>
 
