--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,4 +1,5 @@
-﻿{% set inner = true %}
+{% set isInnerPage = true %}
+{% from "blocks/logo/logo.html" import logo %}
 <!DOCTYPE html>
 <html lang="ru">
 
