--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,6 @@
-{% set inner = true %}
+{% set isInnerPage = true %}
 {% from "blocks/select-direction/select-direction.html" import selectDirection %}
+{% from "blocks/logo/logo.html" import logo %}
 <!DOCTYPE html>
 <html lang="ru">
 
