Замена кнопок на ссылки

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
           <span class="direction__travellers">5326</span>
         </li>
       </ul>
-      <button class="directions__show-all button">Показать все</button>
+      <a href="#" class="directions__show-all button">Показать все</a>
     </section>
 
     <section class="companions">
@@ -105,7 +105,7 @@
 				{% include "blocks/companion/companion.html" %}
 			{% endfor %}
 		</ul>
-		<button class="companions__show-all button">Показать всех</button>
+      <a href="#" class="companions__show-all button">Показать всех</a>
 	</section>
 
     <section class="tariffs">
