добавил лого в меню

--- a/source/blocks/page-header/page-header.html
+++ b/source/blocks/page-header/page-header.html
@@ -3,6 +3,7 @@
   <nav class="main-nav">
     <details>
       <summary class="main-nav__toggle" aria-role="button" aria-haspopup="menu">Открыть меню</summary>
+      {{ logo("page-header", "96", "15", isInnerPage) }}
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
