Превращение элементов в блоки
так как наружные стили одинаковы, отличия внутри

--- a/source/form.html
+++ b/source/form.html
@@ -33,7 +33,7 @@
 
     <section class="new-schedule">
       <h2 class="new-schedule__heading">Добавить план:</h2>
-      <section class="new-schedule__dates step">
+      <section class="new-schedule__step step step-dates">
         <h3 class="step__heading">Шаг 1. Даты пребывания</h3>
         <p class="step__description">
           Укажите предпочтительное количество попутчиков, которых
@@ -50,7 +50,7 @@
 
         <button type="submit" name="add-direction" class="step__next">Следующий шаг</button>
       </section>
-      <section class="new-schedule__mars step">
+      <section class="new-schedule__step step step-route">
         <h3 class="step__heading">Шаг 2. Маршрут</h3>
         <form action="#">
           <p class="step__description">
@@ -64,7 +64,7 @@
           <button type="submit" name="add-direction" class="step__previous">На шаг назад</button>
         </form>
       </section>
-      <section class="new-schedule__mars step">
+      <section class="new-schedule__step step step-fun">
         <h3 class="step__heading">Шаг 3. Развлечения</h3>
         <p class="step__description">
           Наконец, расскажите о своих планах времяпровождения.
