--- a/source/form.html
+++ b/source/form.html
@@ -42,13 +42,15 @@
         <label for="schedule__companions" class="schedule__companions-label">ищу попутчиков:</label>
         <input type="number" id="schedule__companions" class="schedule__companions" value=2>
 
-        <label for="schedule__dates" class="schedule__dates-label">Длительность:</label>
-        <input type="number" id="schedule__dates" class="schedule__dates" value=2>
+        <label for="schedule__duration" class="schedule__duration-label">Длительность:</label>
+        <input type="number" id="schedule__duration" class="schedule__duration" value=2>
 
         <input type="checkbox" id="schedule__children-ok" class="children-ok" checked>
         <label for="schedule__children-ok" class="schedule__children-ok-label">Можно с детьми</label>
 
-        <button type="submit" name="add-direction" class="step__next">Следующий шаг</button>
+        <label for="schedule__start-date">Дата начала путешествия:</label>
+        <input type="date" name="" id="schedule__start-date" class="schedule__start-date" value="2019-07-28">
+        <button type="submit" name="next-step" class="step__next">Следующий шаг</button>
       </section>
       <section class="new-schedule__step step step-route">
         <h3 class="step__heading">Шаг 2. Маршрут</h3>
@@ -60,8 +62,8 @@
 
           {{ selectDirection(4) }}
           <button type="submit" name="add-direction">Добавить страну</button>
-          <button type="submit" name="add-direction" class="step__next">Следующий шаг</button>
-          <button type="submit" name="add-direction" class="step__previous">На шаг назад</button>
+          <button type="submit" name="next-step" class="step__next">Следующий шаг</button>
+          <button type="submit" name="previous-step" class="step__previous">На шаг назад</button>
         </form>
       </section>
       <section class="new-schedule__step step step-fun">
@@ -70,9 +72,19 @@
           Наконец, расскажите о своих планах времяпровождения.
           Можно писать в свободной форме и ставить тэги.
         </p>
-        h4
-        <button type="submit" class="step__next">Отправить</button>
-        <button type="submit" name="add-direction" class="step__previous">На шаг назад</button>
+        <ul class="step-fun__verbal-schedule verbal-schedule">
+          <li class="verbal-schedule__step verbal-step">
+            <h4 class="verbal-step__heading">Босния и герцеговина</h4>
+            <textarea name="verbal-step-1" id="" cols="30" rows="10" placeholder="План действий"></textarea>
+          </li>
+          <li class="verbal-schedule__step verbal-step">
+            <h4 class="verbal-step__heading">Чехословакия</h4>
+            <textarea name="verbal-step-2" id="" cols="30" rows="10"
+              placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться аритектурой и вот это все.</textarea>
+          </li>
+        </ul>
+        <button type="submit" class="step__finish">Отправить</button>
+        <button type="submit" name="previous-step" class="step__previous">На шаг назад</button>
       </section>
     </section>
 
