Выделил блок с уровнем

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,6 @@
-﻿{% set isInnerPage = true %}
+{% set isInnerPage = true %}
 {% from "blocks/logo/logo.html" import logo %}
+{% from "blocks/level/level.html" import level %}
 <!DOCTYPE html>
 <html lang="ru">
 
