--- a/source/index.html
+++ b/source/index.html
@@ -1,4 +1,5 @@
 {% from "blocks/logo/logo.html" import logo %}
+{% from "blocks/level/level.html" import level %}
 <!DOCTYPE html>
 <html lang="ru">
 
