--- a/source/form.html
+++ b/source/form.html
@@ -1,6 +1,7 @@
 {% set isInnerPage = true %}
 {% from "blocks/select-direction/select-direction.html" import selectDirection %}
 {% from "blocks/logo/logo.html" import logo %}
+{% from "blocks/level/level.html" import level %}
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -15,6 +16,7 @@
   <main class="page-main">
 
     {{myprofile.name}}
+      {{ level("my-profile", 80, 50, 3) }}
 
     {% set tags = myprofile.tags %}
     {% include "blocks/tags/tags.html" %}
