Подключил стили, добавил нормалайз

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,4 +1,4 @@
-{% set isInnerPage = true %}
+﻿{% set isInnerPage = true %}
 {% from "blocks/logo/logo.html" import logo %}
 {% from "blocks/level/level.html" import level %}
 <!DOCTYPE html>
@@ -7,6 +7,7 @@
 <head>
   <meta charset="utf-8">
   <title>Сайт поиска попутчиков «Погнали» | Попутчики</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
