--- a/source/form.html
+++ b/source/form.html
@@ -8,6 +8,7 @@
 <head>
   <meta charset="utf-8">
   <title>Сайт поиска попутчиков «Погнали» | Направления</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
