--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>Сайт поиска попутчиков «Погнали»</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
