--- a/source/blocks/level/level.html
+++ b/source/blocks/level/level.html
@@ -24,8 +24,8 @@
       transform="scale({{scale}})" transform-origin="center">
     </circle>
     <circle class="level__segment" cx="50%" cy="50%" r="{{innerRadius}}" fill="transparent" stroke="#ff8d30"
-      stroke-width="{{strokeWidth}}" stroke-dasharray="{{ value }} {{ 100 - value }}"
-      stroke-dashoffset="25" transform="scale({{scale}})" transform-origin="center">
+      stroke-width="{{strokeWidth}}" stroke-dasharray="{{ value }} {{ 100 - value }}" stroke-dashoffset="25"
+      transform="scale({{scale}})" transform-origin="center">
     </circle>
   </svg>
 </div>
